# kubernetes-django-psql

./: .gitignore  Dockerfile  django-deployment.yaml  django-ingress.yaml  django-service.yaml  postgres-config-map.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-statefulset.yaml  pyproject.toml
test_kuber/: manage.py
test_kuber/test_kuber/: asgi.py  settings.py  urls.py  wsgi.py
