[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Dima", email = "some@mail.com"},
]
dependencies = [
    "django>=4.0.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
